(SERVER-2169) Support running under Java 9 and 10